--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,8 @@
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.0",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.6.0",
